fix tests update z-index on minimap & settings panel (settings now in front)

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
       border: 2px solid black;
       padding: 15px;
       position: absolute;
-      z-index: 10;
+      z-index: 1000;
       background-color: white;
     }
     .settings-box h3 {
