--- a/src/components/MiniMap.scss
+++ b/src/components/MiniMap.scss
@@ -1,7 +1,7 @@
 /** MiniMap.scss */
 
 .minimap-holder {
-  z-index: 100000;
+  z-index: 900;
   top: 0;
   bottom: 0;
   background-color: white;
